--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2
-jobs: 
-  build: 
-    docker: 
-      - image: circleci/ruby:2.6.3-stretch-code
+jobs:
+  build:
+    docker:
+      - image: circleci/ruby:2.6.3-stretch-node
 
-    step: 
+    steps:
       - checkout
-      - run: echo "Hello, CircleCI"
+      - run: echo "Hello CircleCI!"
